处理Hikari 连接器配置有误问题